PlaygroundLogger/PlaygroundLogger/LegacySupport/LegacyEntrypoints.swift
@@ -35,7 +35,11 @@ fileprivate func legacySendDataStub(_: NSData) -> Void {
 }
 
 @_silgen_name("playground_log_hidden")
-public func legacyLog<T>(instance: T, name: String, id: Int, startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject {
+public func legacyLog<T>(instance: T, name: String, id: Int, startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject? {
+    guard !PGLThreadIsLogging else { return nil }
+    PGLThreadIsLogging = true
+    defer { PGLThreadIsLogging = false }
+    
     let packet = LogPacket(describingResult: instance, named: name, withPolicy: .default, startLine: startLine, endLine: endLine, startColumn: startColumn, endColumn: endColumn)
 
     let data: Data
@@ -68,7 +72,11 @@ public func legacyLog<T>(instance: T, name: String, id: Int, startLine: Int, end
 }
 
 @_silgen_name ("playground_log_scope_entry")
-public func legacyLogScopeEntry(startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject {
+public func legacyLogScopeEntry(startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject? {
+    guard !PGLThreadIsLogging else { return nil }
+    PGLThreadIsLogging = true
+    defer { PGLThreadIsLogging = false }
+    
     let packet = LogPacket(scopeEntryWithStartLine: startLine, endLine: endLine, startColumn: startColumn, endColumn: endColumn)
 
     // Encoding a scope entry packet should not fail under any circumstances.
@@ -78,7 +86,11 @@ public func legacyLogScopeEntry(startLine: Int, endLine: Int, startColumn: Int, 
 }
 
 @_silgen_name ("playground_log_scope_exit")
-public func legacyLogScopeExit(startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject {
+public func legacyLogScopeExit(startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject? {
+    guard !PGLThreadIsLogging else { return nil }
+    PGLThreadIsLogging = true
+    defer { PGLThreadIsLogging = false }
+    
     let packet = LogPacket(scopeExitWithStartLine: startLine, endLine: endLine, startColumn: startColumn, endColumn: endColumn)
 
     // Encoding a scope exit packet should not fail under any circumstances.
@@ -88,7 +100,11 @@ public func legacyLogScopeExit(startLine: Int, endLine: Int, startColumn: Int, e
 }
 
 @_silgen_name ("playground_log_postprint")
-public func legacyLogPostPrint(startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject {
+public func legacyLogPostPrint(startLine: Int, endLine: Int, startColumn: Int, endColumn: Int) -> AnyObject? {
+    guard !PGLThreadIsLogging else { return nil }
+    PGLThreadIsLogging = true
+    defer { PGLThreadIsLogging = false }
+    
     let printedString = Thread.current.threadDictionary[printedStringThreadDictionaryKey] as! String? ?? ""
     
     Thread.current.threadDictionary.removeObject(forKey: printedStringThreadDictionaryKey)
